Fix 100vh bug on mobile

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -3,3 +3,9 @@
 @tailwind utilities;
 
 @import "toastify";
+
+@supports (-webkit-touch-callout: none) {
+    .min-h-screen {
+        min-height: -webkit-fill-available;
+    }
+}
